--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/aws-ecs": "^1.96.0",
     "@aws-cdk/aws-ecs-patterns": "^1.96.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.96.0",
+    "@aws-cdk/aws-iam": "^1.96.0",
     "@aws-cdk/aws-rds": "^1.96.0",
     "@aws-cdk/aws-route53": "^1.96.0",
     "@aws-cdk/aws-ssm": "^1.96.0",
