--- a/simple/package.json
+++ b/simple/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
+    "tiny-json-http": "^7.3.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
